fix tiling gradient on mobile

--- a/app/assets/stylesheets/_stars.sass
+++ b/app/assets/stylesheets/_stars.sass
@@ -13,11 +13,6 @@ $shadows-small:  multiple-box-shadow(700)
 $shadows-medium: multiple-box-shadow(200)
 $shadows-big:    multiple-box-shadow(100)
 
-html
-  height: 100%
-  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%)
-  overflow: hidden
-
 #stars
   display: block
   width: 1px
