--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -7,6 +7,8 @@ html, body {
 }
 
 body {
+  height: 100%;
+  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   font-family: 'Roboto', Helvetica, Verdana, Arial, sans-serif;
 }
 
