--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -16,6 +16,7 @@
   left: 0;
   position: absolute;
   width: 100%;
+  overflow: hidden;
 
   #scene {
     height: 100vh;
